--- a/views/stylesheets/components/_trp.scss
+++ b/views/stylesheets/components/_trp.scss
@@ -11,7 +11,7 @@
 }
 
 .venstreDiv {
-    .partner {
+    .OngoingProjects {
         color: #0F2841;
         margin-top: 30px;
         font-size: 24px;
@@ -42,3 +42,47 @@
     display: flex;
     width: 100%;
 }
+
+
+.bedrift {
+    height: 100px;
+    width: 100px;
+    background-color: white;
+    margin-top: 10px;
+    border-radius: 50px;
+    position: relative;
+    img{
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        width: 80px;
+        vertical-align: middle;
+        max-width: 80px;
+        margin: auto;
+    }  
+
+}
+
+.GlobalBlue {
+    img{width: 60px;}
+    }
+.bsmart {
+    img{width: 60px;}
+}
+
+.bedrifter {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    
+    -webkit-flex-flow: row wrap;
+    justify-content: space-around;
+  }
