oppdatert on going project

--- a/views/stylesheets/components/_trp.scss
+++ b/views/stylesheets/components/_trp.scss
@@ -12,7 +12,15 @@
     z-index: 100;
     box-shadow: 0 -20px 100px #0F2841;
 }
-
+.interested-btn{
+    background-color: #0F2841;
+    color: white;
+    max-width: 300px;
+    font-size: 20px;
+    text-transform: uppercase;
+    margin: auto;
+    padding: 20px;
+}
 .venstreDiv {
     .OngoingProjects {
         color: #0F2841;
