--- a/views/stylesheets/components/_trp.scss
+++ b/views/stylesheets/components/_trp.scss
@@ -12,20 +12,28 @@
     z-index: 100;
     box-shadow: 0 -20px 100px #0F2841;
 }
-.interested-btn{
-    background-color: #0F2841;
-    color: white;
-    max-width: 300px;
-    font-size: 20px;
-    text-transform: uppercase;
-    margin: auto;
-    padding: 20px;
+
+.interested {
+    bottom: 20px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    .interested-btn {
+        cursor: pointer;
+        background-color: #0F2841;
+        color: white;
+        max-width: 300px;
+        font-size: 20px;
+        text-transform: uppercase;
+        margin: auto;
+        padding: 20px;
+    }
 }
+
 .venstreDiv {
     .OngoingProjects {
         color: #0F2841;
         margin-top: 30px;
-        
         font-size: 24px;
         font-weight: 400;
     }
@@ -72,6 +80,13 @@
         background-color: #0F2841;
         height: 100%;
         width: 100%;
+        .idea{
+            height: 80px;
+        }
+        p{
+            color: white;
+            font-size: 18px;
+        }
     }
     .benefitsbuttons {
         display: flex;
@@ -138,6 +153,68 @@
     justify-content: space-around;
 }
 
+.Modal-modal-0-1-3 {
+    width: 100%;
+    max-width: 600px;
+}
+
+.Modal-modal-0-1-3 form {
+    width: 100%;
+}
+
+.Modal-modal-0-1-3 input {
+    width: 100%;
+    margin: auto;
+    background: #0F2841;
+    color: white;
+    margin-top: 40px;
+    opacity: 1;
+}
+
+form textarea {
+    display: block;
+    width: 100%;
+    font-size: 14px;
+    font-weight: 100;
+    text-indent: 10px;
+    padding-top: 10px;
+    border: none;
+    margin-top: 10px;
+}
+
+form textarea {
+    display: block;
+    background: #0F2841;
+    color: white;
+}
+
+.Modal-modal-0-1-3 ::-webkit-input-placeholder {
+    opacity: 0.6;
+    color: white;
+}
+
+.Modal-modal-0-1-3 ::-moz-placeholder {
+    color: white;
+}
+
+.Modal-modal-0-1-3 :-ms-input-placeholder {
+    color: white;
+}
+
+.Modal-modal-0-1-3 :-moz-placeholder {
+    color: white;
+}
+
+.Modal-modal-0-1-3 .interested {
+    position: relative;
+    bottom: unset;
+    margin-top: 10px;
+}
+.Modal-modal-0-1-3 .interested-btn {
+    text-align: center;
+    margin-top: 20px;
+}
+
 @mixin mobile-receipt-project() {
     .thereceiptproject {
         box-shadow: 0 0px 100px #0F2841;
@@ -148,10 +225,11 @@
         overflow-x: scroll;
         width: auto;
         white-space: nowrap;
-        .bedrift{
+        .bedrift {
             margin-right: 10px;
+            display: inline-block;
         }
-        > div {
+        >div {
             display: inline-block;
         }
     }
@@ -167,11 +245,11 @@
             font-size: 14px;
             line-height: 1.6;
         }
-        .høyrediv > p {
+        .høyrediv>p {
             font-size: 14px;
             line-height: 1.6;
         }
-        .benefitsbutton{
+        .benefitsbutton {
             font-size: 12px;
         }
     }
