--- a/views/stylesheets/components/_main.scss
+++ b/views/stylesheets/components/_main.scss
@@ -13,7 +13,7 @@
 
 form {
     display: inline-block;
-    width: 50%;
+    width: 60%;
 }
 
 input:-webkit-autofill,
@@ -128,6 +128,9 @@ ul {
 }
 
 @mixin mobile-main-container() {
+    .secondPage{
+        transition: .5s margin-top;
+    }
     .main-container {
         width: 80%;
         padding: 0 0 0 0;
@@ -138,7 +141,7 @@ ul {
     }
     .bottom {
         position: absolute;
-        bottom: 10px;
+        bottom: 70px;
         left: 10px;
         right: 10px;
     }
