--- a/views/stylesheets/components/_trp.scss
+++ b/views/stylesheets/components/_trp.scss
@@ -1,3 +1,11 @@
+.secondPage {
+    margin-top: 100vh;
+}
+.firstpage {
+    position: fixed;
+    top: 0;
+}
+
 .thereceiptproject {
     padding: 40px 0;
     color: #0F2841;
@@ -80,8 +88,11 @@
         background-color: #0F2841;
         height: 100%;
         width: 100%;
+        min-height: 300px;
+        padding: 20px;
         .idea{
-            height: 80px;
+            height: 60px;
+            width: 60px;    
         }
         p{
             color: white;
@@ -108,6 +119,7 @@
 }
 
 .bedrift {
+    box-shadow: 0 0 10px rgba(15, 40, 65, 0.1);
     cursor: pointer;
     height: 100px;
     width: 100px;
@@ -148,6 +160,7 @@
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
+    -webkit-overflow-scrolling: touch;
     display: flex;
     -webkit-flex-flow: row wrap;
     justify-content: space-around;
@@ -215,7 +228,21 @@ form textarea {
     margin-top: 20px;
 }
 
+.class-name button {
+    display: none;
+}
+.class-name button:nth-child(4) {
+    display: block !important;
+    position: absolute;
+    left: 50px;
+    bottom: 50px;
+    opacity: 0.1;
+}
+
 @mixin mobile-receipt-project() {
+    .interested .interested-btn {
+        font-size: 14px;
+    }
     .thereceiptproject {
         box-shadow: 0 0px 100px #0F2841;
         padding: 5px 10px;
@@ -226,8 +253,13 @@ form textarea {
         width: auto;
         white-space: nowrap;
         .bedrift {
+            height: 70px;
+            width: 70px;
             margin-right: 10px;
             display: inline-block;
+            img{
+                width: 50px;
+            }
         }
         >div {
             display: inline-block;
@@ -251,6 +283,13 @@ form textarea {
         }
         .benefitsbutton {
             font-size: 12px;
+        }
+        .benefitsbox {
+            min-height: 200px;
+            p{
+                font-size: 14px;
+        line-height: 1.5;
+            }
         }
     }
 }
